# silizium

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml  deny.toml
.github/workflows/: rust.yaml
src/: error.rs  lib.rs  status.rs  zigbee.rs
src/status/: alloc.rs  cli.rs  command.rs  eeprom.rs  flash.rs  io.rs  mac.rs  param.rs  security.rs  space.rs  state.rs  wifi.rs
src/zigbee/: security.rs
src/zigbee/security/: man.rs
src/zigbee/security/man/: aps_key_metadata.rs  context.rs  derived_key_type.rs  flags.rs  key.rs  key_type.rs  network_key_info.rs
supply-chain/: audits.toml  config.toml
