[package]
name = "siliconlabs"
description = "Core library for software by Silicon Labs"
license = "Apache-2.0"
repository = "https://github.com/PaulmannLighting/siliconlabs"
keywords = ["silicon", "labs", "library"]
categories = ["data-structures", "hardware-support", "network-programming"]
version = "0.1.0"
edition = "2021"
authors = ["Richard Neumnn <neumann@paulmann.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
le-stream = { version = "0.2", features = ["derive"], optional = true }
